--- a/moroso/index.html
+++ b/moroso/index.html
@@ -16,12 +16,12 @@
     <div class="form-header">
       <img src="img/digicon.png" alt="Logo Digicon">
       <h2>¡ATENCIÓN!</h2>
-      <p>Estimado cliente, le informamos que hemos <span>SUSPENDIDO TEMPORALMENTE</span> su servicio debido a una falta
-        de pago.
+      <p>Estimado cliente, le informamos que hemos <span>SUSPENDIDO TEMPORALMENTE</span> su servicio por falta
+        de pago de su factura.
         Para restablecer su servicio, por favor realice el pago en nuestra oficina Digicon o mediante consignación en
         nuestra
         cuenta de ahorros Bancolombia con número <span>285-000-019-01</span>, posteriormente envíe la tirilla de pago
-        haciendo clic en el botón de bajo o al número <span>3134987857</span>.</p>
+        haciendo clic en el botón de bajo o al WhatsApp <span>3134987857</span>.</p>
     </div>
     <div class="form-btn">
       <p>Agradecemos su comprensión y lamentamos cualquier inconveniente causado.</p>
